<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/StrRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Registro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/StrRegistro">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userNameNewUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/nombreNewUser"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/StruserNameNwUser"
                    app:layout_constraintTop_toBottomOf="@+id/StruserNameNwUser" />

                <EditText
                    android:id="@+id/ApellidoNewUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/apellidoNewUser"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/strPassNewUser"
                    app:layout_constraintTop_toBottomOf="@+id/strPassNewUser" />

                <TextView
                    android:id="@+id/StruserNameNwUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombreNewUser"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/strPassNewUser"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/apellidoNewUser"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/userNameNewUser"
                    app:layout_constraintTop_toBottomOf="@+id/userNameNewUser" />

                <TextView
                    android:id="@+id/strMailNwUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/mailNewUser"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/ApellidoNewUser"
                    app:layout_constraintTop_toBottomOf="@+id/ApellidoNewUser" />

                <EditText
                    android:id="@+id/mailNewUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="@+id/strMailNwUser"
                    app:layout_constraintTop_toBottomOf="@+id/strMailNwUser" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.00999999">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailNewUser"
                app:layout_constraintVertical_bias="0.362" />

            <Button
                android:id="@+id/Registro2_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailNewUser"
                app:layout_constraintVertical_bias="0.362" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>