<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".mainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/IniciarSesion"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:hint="Nombre de Usuario"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toBottomOf="@+id/userName"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/userName"
                    android:textSize="30sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/userPassword"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/userID"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/userPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@+id/userPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.00999999">

            <Button
                android:id="@+id/Entrar_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Entrar" />

            <Button
                android:id="@+id/Registro_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/registrarse" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

