<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/body">

                    <Button
                        android:id="@+id/back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back" />

                    <Button
                        android:id="@+id/inicio_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Entrar" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="@string/lorem" />
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.motion.widget.MotionLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutDescription="@xml/fragment_inicio_xml_constraintlayout_scene">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="410dp"
                            android:layout_height="115dp"
                            android:contentDescription="Imagen"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/health" />

                        <TextView
                            android:id="@+id/tileMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:forceDarkAllowed="true"
                            android:text="@string/AbautUs"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/image" />
                    </androidx.constraintlayout.motion.widget.MotionLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

